Fix Chrome security warning issues by improving trust signals and removing overly strict security policies

--- a/client/index.html
+++ b/client/index.html
@@ -3,20 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Removed restrictive CSP -->
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
-    <meta name="description" content="SecureBank - Modern Online Banking Solution">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#ffffff">
-    <title>SecureBank - Modern Online Banking Platform</title>
+    <title>SecureBank - Modern Banking Reimagined</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="description" content="Your trusted banking partner with secure, modern financial services." />
+    <meta name="theme-color" content="#0f172a" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
