Add more trust signals to HTML for better security recognition

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SecureBank - Modern Banking Reimagined</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="description" content="Your trusted banking partner with secure, modern financial services." />
+    <meta name="description" content="Your trusted banking partner with secure, modern financial services. Educational demo for project submission purposes." />
+    <meta name="author" content="SecureBank Development Team" />
+    <meta name="keywords" content="online banking, digital banking, educational, project, demo" />
     <meta name="theme-color" content="#0f172a" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="SecureBank - Educational Demo" />
+    <meta property="og:description" content="Educational banking platform demo for project submission purposes." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="SecureBank - Educational Demo" />
+    <meta name="twitter:description" content="Educational banking platform demo for project submission purposes." />
+    <meta name="application-name" content="SecureBank Demo" />
+    <meta name="apple-mobile-web-app-title" content="SecureBank" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="canonical" href="https://bank-demo.onrender.com/" />
   </head>
   <body>
     <div id="root"></div>
