--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SecureBank - Modern Banking Reimagined</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="description" content="Your trusted banking partner with secure, modern financial services. Educational demo for project submission purposes." />
     <meta name="author" content="SecureBank Development Team" />
     <meta name="keywords" content="online banking, digital banking, educational, project, demo" />
