--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     <meta name="application-name" content="SecureBank Demo" />
     <meta name="apple-mobile-web-app-title" content="SecureBank" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
-    <link rel="canonical" href="https://bank-demo.onrender.com/" />
+    <link rel="canonical" href="https://ss-bank.onrender.com/" />
   </head>
   <body>
     <div id="root"></div>
