Add browser restriction feature to block secure browsers

--- a/client/index.html
+++ b/client/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SecureBank - Modern Banking Reimagined</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <meta name="description" content="Your trusted banking partner with secure, modern financial services. Educational demo for project submission purposes." />
-    <meta name="author" content="SecureBank Development Team" />
-    <meta name="keywords" content="online banking, digital banking, educational, project, demo" />
-    <meta name="theme-color" content="#0f172a" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="SecureBank - Educational Demo" />
-    <meta property="og:description" content="Educational banking platform demo for project submission purposes." />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="SecureBank - Educational Demo" />
-    <meta name="twitter:description" content="Educational banking platform demo for project submission purposes." />
-    <meta name="application-name" content="SecureBank Demo" />
-    <meta name="apple-mobile-web-app-title" content="SecureBank" />
-    <link rel="apple-touch-icon" href="/favicon.ico" />
-    <link rel="canonical" href="https://ss-bank.onrender.com/" />
+    <meta name="description" content="Educational demo of an online banking platform. Not a real bank." />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="googlebot" content="noindex, nofollow" />
+    <meta name="google" content="notranslate" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="application-name" content="Banking Demo" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Banking Demo" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="demo-site" content="true" />
+    <meta name="educational-demo" content="true" />
+    <meta name="google-site-verification" content="educational-demo-only" />
+    <title>Banking Platform Demo</title>
+    <script src="/browser-check.js"></script>
   </head>
   <body>
     <div id="root"></div>
